<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_about"
        android:name="com.example.trafficticket.ui.about.AboutFragment"
        android:label="@string/menu_about"
        tools:layout="@layout/fragment_about" />

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.trafficticket.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />


    <fragment
        android:id="@+id/nav_UpdateProfile"
        android:name="com.example.trafficticket.ui.UpdateProfile.UpdateProfileFragment"
        android:label="@string/menu_update_profile"
        tools:layout="@layout/fragment_update_profile" />

    <fragment
        android:id="@+id/nav_help"
        android:name="com.example.trafficticket.ui.help.HelpFragment"
        android:label="@string/menu_help"
        tools:layout="@layout/fragment_help" />

    <fragment
        android:id="@+id/nav_changepwd"
        android:name="com.example.trafficticket.ui.resetpwd.ResetPwdFragment"
        android:label="Reset Password"
        tools:layout="@layout/fragment_resetpwd" />

    <fragment
        android:id="@+id/nav_logout"
        android:name="com.example.trafficticket.ui.logout.LogoutFragment"
        android:label="LogOut"
        tools:layout="@layout/fragment_logout" />



</navigation>